--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="portfolio.html">Portfolio</a></li>
-							<li><a href="KhineChan_Resume.pdf">Resume</a></li>
+							<li><a href="KhineChan_Resume(DataAnalyst).pdf">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/chankhine/" class="icon brands fa-linkedin"></a></li>
